# Veripro-Scanner

./: .gitignore  LICENSE  LICENSE-COMMERCIAL  LICENSE-MIT  PITCH.md  README.md
FM-rust-cloud/: .gitignore  ARCHITECTURE_GUIDE copy.md  ARCHITECTURE_GUIDE.html  ARCHITECTURE_GUIDE.md  ARCHITECTURE_GUIDE.md.backup2  ARCHITECTURE_GUIDE.md.bak  ARCHITECTURE_GUIDE_tmp.html  Cargo.toml  DEPLOYMENT.md  README.md  anvil_log.txt  c.html  cbse-guide-with-diagrams.html  coordinator_log.txt  package-lock.json
FM-rust-cloud/crates/cbse/: Cargo.toml
FM-rust-cloud/crates/cbse-assertions/: Cargo.toml
FM-rust-cloud/crates/cbse-assertions/src/: lib.rs
FM-rust-cloud/crates/cbse-bitvec/: Cargo.toml
FM-rust-cloud/crates/cbse-bitvec/src/: lib.rs
FM-rust-cloud/crates/cbse-build/: Cargo.toml
FM-rust-cloud/crates/cbse-build/src/: lib.rs
FM-rust-cloud/crates/cbse-bytevec/: Cargo.toml
FM-rust-cloud/crates/cbse-bytevec/src/: lib.rs
FM-rust-cloud/crates/cbse-calldata/: Cargo.toml
FM-rust-cloud/crates/cbse-calldata/src/: lib.rs
FM-rust-cloud/crates/cbse-cheatcodes/: Cargo.toml
FM-rust-cloud/crates/cbse-cheatcodes/src/: lib.rs
FM-rust-cloud/crates/cbse-config/: Cargo.toml
FM-rust-cloud/crates/cbse-config/src/: lib.rs
FM-rust-cloud/crates/cbse-console/: Cargo.toml
FM-rust-cloud/crates/cbse-console/src/: lib.rs
FM-rust-cloud/crates/cbse-constants/: Cargo.toml
FM-rust-cloud/crates/cbse-constants/src/: lib.rs
FM-rust-cloud/crates/cbse-contract/: Cargo.toml
FM-rust-cloud/crates/cbse-contract/src/: lib.rs
FM-rust-cloud/crates/cbse-coordinator/: Cargo.toml
FM-rust-cloud/crates/cbse-coordinator/src/: main.rs
FM-rust-cloud/crates/cbse-env/: Cargo.toml
FM-rust-cloud/crates/cbse-env/src/: lib.rs
FM-rust-cloud/crates/cbse-env/tests/: integration_test.rs
FM-rust-cloud/crates/cbse-exceptions/: Cargo.toml
FM-rust-cloud/crates/cbse-exceptions/src/: lib.rs
FM-rust-cloud/crates/cbse-flamegraphs/: Cargo.toml
FM-rust-cloud/crates/cbse-flamegraphs/src/: lib.rs
FM-rust-cloud/crates/cbse-hashes/: Cargo.toml
FM-rust-cloud/crates/cbse-hashes/src/: lib.rs
FM-rust-cloud/crates/cbse-logs/: Cargo.toml
FM-rust-cloud/crates/cbse-logs/src/: lib.rs
FM-rust-cloud/crates/cbse-mapper/: Cargo.toml
FM-rust-cloud/crates/cbse-mapper/src/: lib.rs
FM-rust-cloud/crates/cbse-mapper/tests/: integration_test.rs
FM-rust-cloud/crates/cbse-memtrace/: Cargo.toml
FM-rust-cloud/crates/cbse-memtrace/src/: lib.rs
FM-rust-cloud/crates/cbse-memtrace/tests/: integration_test.rs
FM-rust-cloud/crates/cbse-processes/: Cargo.toml
FM-rust-cloud/crates/cbse-processes/src/: lib.rs
FM-rust-cloud/crates/cbse-protocol/: Cargo.toml
FM-rust-cloud/crates/cbse-protocol/src/: lib.rs
FM-rust-cloud/crates/cbse-remote/: Cargo.toml
FM-rust-cloud/crates/cbse-remote/src/: artifact.rs  executor.rs  lib.rs  ssh.rs
FM-rust-cloud/crates/cbse-sevm/: Cargo.toml
FM-rust-cloud/crates/cbse-sevm/src/: keccak_registry.rs  lib.rs  opcodes.rs  path.rs  state.rs  storage.rs  worklist.rs
FM-rust-cloud/crates/cbse-sevm/tests/: test_new_opcodes.rs
FM-rust-cloud/crates/cbse-solver/: Cargo.toml
FM-rust-cloud/crates/cbse-solver/src/: lib.rs
FM-rust-cloud/crates/cbse-solvers/: Cargo.toml
FM-rust-cloud/crates/cbse-solvers/src/: lib.rs
FM-rust-cloud/crates/cbse-traces/: Cargo.toml
FM-rust-cloud/crates/cbse-traces/src/: lib.rs
FM-rust-cloud/crates/cbse-ui/: Cargo.toml
FM-rust-cloud/crates/cbse-ui/src/: lib.rs
FM-rust-cloud/crates/cbse-utils/: Cargo.toml
FM-rust-cloud/crates/cbse-utils/src/: lib.rs
FM-rust-cloud/crates/cbse/src/: main.rs  report.rs
FM-rust-cloud/deployment/: coordinator.service
FM-rust-cloud/scripts/: deploy_aws.sh  install-z3-remote.sh  integration-test.sh  monitor.txt  setup-remote-node.sh  setup-server.sh  test-protocol-flow.sh
FM-rust-cloud/src/: main.rs
cbse-frontend/: README.md  env.example  next.config.ts  package-lock.json  package.json
cbse-frontend/app/: globals.css  layout.tsx  page.tsx
cbse-frontend/app/api/github/auth/: route.ts
cbse-frontend/app/api/github/callback/: route.ts
cbse-frontend/app/api/github/repos/: route.ts
cbse-frontend/app/api/github/user-repos/: route.ts
cbse-frontend/app/api/verify/: route.ts
cbse-frontend/app/api/veripro-ai/: route.ts
cbse-frontend/app/app/: layout.tsx  page.tsx
cbse-frontend/app/app/projects/: page.tsx
cbse-frontend/app/app/projects/[id]/: page.tsx
cbse-frontend/app/app/projects/new/: page.tsx
cbse-frontend/app/app/results/: page.tsx
cbse-frontend/app/app/settings/: page.tsx
cbse-frontend/app/app/verify/: page.tsx
cbse-frontend/app/components/: Card3D.tsx  CodeVisualization.tsx  DemoInterface.tsx  GeometricBackground.tsx  LightningFlash.tsx  Navbar.tsx  ParticleBackground.tsx  SpecificationExample.tsx  StreamingTerminal.tsx  SyntaxEditor.tsx  VeriProAI.tsx  VerificationOutput.tsx
cbse-frontend/app/demo/: page.tsx
cbse-frontend/app/docs/: page.tsx
cbse-frontend/app/lib/: AttestationRegistryABI.json  contracts.ts  providers.tsx  store.ts  useAttestation.ts  wagmi.ts
scripts/: start-local-coordinator.sh
smart-contracts/: .gitignore  README.md  env.example  foundry.toml
smart-contracts/script/: DeployRegistry.s.sol
smart-contracts/src/: AttestationRegistry.sol
test-contract/: CBSE_TEST_README.md
test-contract/src/: SimpleVault.sol
test-contract/test/: FailingTest.t.sol  SimpleVault.t.sol
