[workspace]
members = [
    "crates/cbse",
    "crates/cbse-bitvec",
    "crates/cbse-bytevec",
    "crates/cbse-config",
    "crates/cbse-sevm",
    "crates/cbse-contract",
    "crates/cbse-cheatcodes",
    "crates/cbse-solver",
    "crates/cbse-build",
    "crates/cbse-utils",
    "crates/cbse-calldata",
    "crates/cbse-exceptions",
    "crates/cbse-logs",
    "crates/cbse-hashes",
    "crates/cbse-constants",
    "crates/cbse-assertions",
    "crates/cbse-memtrace",
    "crates/cbse-traces",
    "crates/cbse-ui",
    "crates/cbse-console",
    "crates/cbse-env",
    "crates/cbse-mapper",
    "crates/cbse-processes",
    "crates/cbse-flamegraphs",
    "crates/cbse-solvers",
    "crates/cbse-remote", "crates/cbse-protocol", "crates/cbse-coordinator",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["CBSE Contributors"]
repository = "https://github.com/cbse/cbse"

[workspace.dependencies]
# Core dependencies
z3 = "0.12"
ethers = "2.0"
revm = { version = "14.0", default-features = false, features = ["std"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# Data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
bimap = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI and UI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.11"

# Hashing
sha3 = "0.10"
keccak-hash = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Utilities
hex = "0.4"
lazy_static = "1.4"
once_cell = "1.19"
toml = "0.8"
regex = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.10"

# Internal workspace crates
cbse-bitvec = { path = "crates/cbse-bitvec" }
cbse-bytevec = { path = "crates/cbse-bytevec" }
cbse-config = { path = "crates/cbse-config" }
cbse-sevm = { path = "crates/cbse-sevm" }
cbse-contract = { path = "crates/cbse-contract" }
cbse-cheatcodes = { path = "crates/cbse-cheatcodes" }
cbse-console = { path = "crates/cbse-console" }
cbse-solver = { path = "crates/cbse-solver" }
cbse-build = { path = "crates/cbse-build" }
cbse-utils = { path = "crates/cbse-utils" }
cbse-calldata = { path = "crates/cbse-calldata" }
cbse-exceptions = { path = "crates/cbse-exceptions" }
cbse-logs = { path = "crates/cbse-logs" }
cbse-hashes = { path = "crates/cbse-hashes" }
cbse-constants = { path = "crates/cbse-constants" }
cbse-traces = { path = "crates/cbse-traces" }
cbse-remote = { path = "crates/cbse-remote" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
