[package]
name = "cbse-bitvec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
z3.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
cbse-exceptions.workspace = true

[dev-dependencies]
