[package]
name = "cbse-bytevec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cbse-bitvec.workspace = true
cbse-exceptions.workspace = true
z3.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
