[package]
name = "cbse-calldata"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cbse-bitvec.workspace = true
cbse-bytevec.workspace = true
cbse-exceptions.workspace = true
cbse-logs.workspace = true
cbse-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
z3.workspace = true
regex = "1.5"
hex = "0.4"
