[package]
name = "cbse-cheatcodes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cbse-exceptions.workspace = true
cbse-bitvec.workspace = true
cbse-bytevec.workspace = true
cbse-logs.workspace = true
cbse-utils.workspace = true
z3 = { workspace = true }
hex = "0.4"
