[package]
name = "cbse-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
regex.workspace = true
shell-words = "1.1"
cbse-utils.workspace = true
