[package]
name = "cbse-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cbse-bytevec.workspace = true
cbse-bitvec.workspace = true
cbse-calldata.workspace = true
cbse-exceptions.workspace = true
cbse-constants.workspace = true
cbse-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
hex = "0.4"
once_cell = "1.19"
z3.workspace = true
