[package]
name = "cbse-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true, features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["std"] }
