[package]
name = "cbse-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rpassword = "7.3"
ssh2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
cbse-config.workspace = true
