[package]
name = "cbse-solvers"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
which = "6.0"
cbse-ui = { path = "../cbse-ui" }
cbse-utils = { path = "../cbse-utils" }
