[package]
name = "cbse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cbse"
path = "src/main.rs"

[dependencies]
cbse-config.workspace = true
cbse-logs.workspace = true
cbse-build.workspace = true
cbse-sevm.workspace = true
cbse-solver.workspace = true
cbse-contract.workspace = true
cbse-calldata.workspace = true
cbse-exceptions.workspace = true
cbse-bitvec.workspace = true
cbse-bytevec.workspace = true
cbse-constants.workspace = true
cbse-hashes.workspace = true
cbse-utils.workspace = true
cbse-traces.workspace = true
cbse-remote.workspace = true
cbse-protocol = { path = "../cbse-protocol" }

clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
z3.workspace = true
rayon.workspace = true
indicatif.workspace = true
humantime-serde = "1.1"
regex.workspace = true
sha3.workspace = true
hex.workspace = true
chrono = "0.4"
